--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
    "dependencies": {
+      "@fastify/swagger": "^8.3.1",
       "ajv": "^8.12.0",
       "fastify": "^4.15.0",
       "pg": "^8.4.0",
